@@ -1,3 +1,9 @@
+Tue Apr 10 19:51:19 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>
+
+        * tools/scripts/lcov.pl:
+
+          Cleaning up lcov errors in info file.
+
 Tue Apr 10 17:13:37 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>
 
         * tools/scripts/lcov.pl:
